--- a/pages/skills.html
+++ b/pages/skills.html
@@ -7,7 +7,7 @@
         <div class="header">
             <h1>💪 Skill set</h1>
             <p>
-                These are my skills, I code everyday gaining experience and sharpening my skills day by day to reach my goal.
+                These are my skills what I'm good and bad at, I code regularly gaining experience and sharpening my skills so this is work in progress.
             </p>
         </div>
 
