--- a/pages/skills.html
+++ b/pages/skills.html
@@ -35,10 +35,10 @@
                         <th>Level</th>
                         <th>Extra</th>
                     </tr>
-                    <tr>
+                        <tr>
                         <td>Python</td>
-                        <td>Intermediate</td>
-                        <td>Most fluent language. I've been coding discord bots, with python. Good with discord.py, pymongo, PyQt & more.</td>
+                        <td>Experienced</td>
+                        <td>Most fluent language I use to code. This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
                     </tr>
                     <tr>
                         <td>Server Management</td>
