--- a/pages/skills.html
+++ b/pages/skills.html
@@ -21,16 +21,6 @@
             <div class="main" align="center">
                 <table width=1000px>
                     <tr>
-                        <th>
-                            <p align="left">
-                                This is work in progess, but here's the list of things that I'm good and bad at.
-                            </p>
-                        </th>
-                    </tr>
-                </table>
-                <br>
-                <table width=1000px>
-                    <tr>
                         <th width=150px>Language</th>
                         <th>Level</th>
                         <th>Extra</th>
@@ -38,7 +28,7 @@
                         <tr>
                         <td>Python</td>
                         <td>Experienced</td>
-                        <td>Most fluent language I use to code. This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+                        <td>Most fluent language. This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
                     </tr>
                     <tr>
                         <td>Server Management</td>
