--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <h1>📑 About me</h1>
                 <p>
                     I'm still in high school studying for GCE AL's in 2023 mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
-                    Got into programming when the pandemic lockdown began in 2020 April.
-                    Got into discord, met a dev who intoduced me to to javascript who later suggested me to learn python.
+                    Got into programming when the pandemic lockdown began in 2020 April,
+                    When a dev who intoduced me to to javascript who later suggested me to learn python.
                     Met <a href="https://github.com/LeoSko" target="_blank" >LeoSko</a> who gave me good advice and an opportunity.
                     I plan to become a full stack dev one day.
                 </p>
