Moved style sheet to /static and more..

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,20 +1,20 @@
 <html>
-    <link rel="stylesheet" href="\ItsJoshie\stylesheet.css">
+    <link rel="stylesheet" href="/static/stylesheet.css">
     <title>Joshie's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
     <body>
         <div class="header">
-            <h1>💼 Projects</h1>
+            <h1>Projects</h1>
             <p>
-                Projects that I handle or contribute
+                Projects that I handle or contribute to
             </p>
         </div>
 
         <div class="navbar">
-            <a class="left" href="\ItsJoshie\">🏠 Back to home</a>
-            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">💬 Discord</a>
-            <a class="right" target="_blank" href="https://github.com/ItsJoshie">🦑 Github</a>
+            <a class="left" href="\">Back to home</a>
+            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
+            <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
         </div>
 
         <div class="row">
@@ -24,7 +24,7 @@
                         <th>
                             <p align="left">
                                 Most of the projects I handled/contributed are not open source as the owner/me of the project is not comfortable with sharing the source code.
-                                There are few projects where the work result is visible. Looking forward to contribute Python projects and fill this table up.
+                                There are few projects where the work result is visible. Looking forward to contribute to more projects and fill this table up.
                             </p>
                         </th>
                     </tr>
