--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,20 +1,20 @@
 <html>
-    <link rel="stylesheet" href="\ItsJoshie\stylesheet.css">
+    <link rel="stylesheet" href="/static/stylesheet.css">
     <title>Joshie's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
     <body>
         <div class="header">
-            <h1>💪 Skill set</h1>
+            <h1>Skill set</h1>
             <p>
                 These are my skills what I'm good and bad at, I code regularly gaining experience and sharpening my skills so this is work in progress.
             </p>
         </div>
 
         <div class="navbar">
-            <a class="left" href="\ItsJoshie\">🏠 Back to home</a>
-            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">💬 Discord</a>
-            <a class="right" target="_blank" href="https://github.com/ItsJoshie">🦑 Github</a>
+            <a class="left" href="\">Back to home</a>
+            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
+            <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
         </div>
 
         <div class="row">
@@ -34,6 +34,12 @@
                         <td>Server Management</td>
                         <td>Intermediate</td>
                         <td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
+                    </tr>
+                    </tr>
+                        <tr>
+                        <td>Databases</td>
+                        <td>Intermediate</td>
+                        <td>So far I've worked with mongo db and PostgreSQL</td>
                     </tr>
                     <tr>
                         <td>HTML</td>
