--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="/static/stylesheet.css">
     <title>Joshie's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
     <body>
         <div class="header">
-            <h1>👋 ItsJoshie</h1>
+            <h1>ItsJoshie</h1>
             <p>Hello, my name is joshie and I like to code as a hobby and this is my website</p>
         </div>
 
         <div class="navbar">
-            <a class="left" href="./pages/skills.html">💪 Skill set</a>
-            <a class="left" href="./pages/projects.html">💼 Projects</a>
-            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">💬 Discord</a>
-            <a class="right" target="_blank" href="https://github.com/ItsJoshie">🦑 Github</a>
+            <a class="left" href="./pages/skills.html">Skill set</a>
+            <a class="left" href="./pages/projects.html">Projects</a>
+            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
+            <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
         </div>
 
         <div class="row">
@@ -22,12 +22,13 @@
             </div>
 
             <div class="main">
-                <h1>📑 About me</h1>
+                <h1>About me</h1>
                 <p>
-                    I'm still in high school studying for GCE AL's in 2023 mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
+                    I'm 16 years old, still in high school studying for GCE AL's in 2023 mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
                     Got into programming when the pandemic lockdown began in 2020 April,
-                    When a dev who intoduced me to to javascript who later suggested me to learn python.
-                    Met <a href="https://github.com/LeoSko" target="_blank" >LeoSko</a> who gave me good advice and an opportunity.
+                    when a dev who intoduced me to to javascript who later suggested me to learn python and javascript.
+                    Since then I've been coding a lot in both the languages.
+                    Met <a href="https://github.com/LeoSko" target="_blank" >LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project.
                     I plan to become a full stack dev one day.
                 </p>
             </div>
