Moved pages out of /pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" href="/static/stylesheet.css">
+    <link rel="stylesheet" href="./static/stylesheet.css">
     <title>Joshie's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
@@ -10,8 +10,8 @@
         </div>
 
         <div class="navbar">
-            <a class="left" href="./pages/skills.html">Skill set</a>
-            <a class="left" href="./pages/projects.html">Projects</a>
+            <a class="left" href="./skills.html">Skill set</a>
+            <a class="left" href="./projects.html">Projects</a>
             <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
             <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
         </div>
