--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" href="/static/stylesheet.css">
+    <link rel="stylesheet" href="./static/stylesheet.css">
     <title>Joshie's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
@@ -12,7 +12,7 @@
         </div>
 
         <div class="navbar">
-            <a class="left" href="\">Back to home</a>
+            <a class="left" href="./">Back to home</a>
             <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
             <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
         </div>
