--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
                         <tr>
                         <td>Python</td>
                         <td>Experienced</td>
-                        <td>Most fluent language. This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+                        <td>This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
                     </tr>
                     <tr>
                         <td>Server Management</td>
