--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" href="./static/stylesheet.css">
+    <link rel="stylesheet" href="./static/css/styles.css">
     <title>Joshie's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
