--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <html>
     <link rel="stylesheet" href="./static/css/styles.css">
-    <title>Joshie's website</title>
-    <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
+    <title>Yas_!_ru's website</title>
+    <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
 
     <body>
         <div class="header">
-            <h1>ItsJoshie</h1>
-            <p>Hello, my name is joshie and I like to code as a hobby and this is my website</p>
+            <h1>Yas_!_ru</h1>
+            <p>Hello, my name is yasiru and I like to code as a hobby and this is my website</p>
         </div>
 
         <div class="navbar">
             <a class="left" href="./skills.html">Skill set</a>
             <a class="left" href="./projects.html">Projects</a>
             <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
-            <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
+            <a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
         </div>
 
         <div class="row">
             <div class="side" align="center">
-                <img height=250px width=250px src="https://cdn.discordapp.com/avatars/837258955415748639/a_baa3efffac09bfc7e07f9ec1602403ba.gif?size=1024">
+                <img height=250px width=250px src="./static/images/profile_icon.jpg">
             </div>
 
             <div class="main">
