--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <html>
     <link rel="stylesheet" href="./static/css/styles.css">
-    <title>Joshie's website</title>
+    <title>Yas_!_ru's website</title>
     <link rel="icon" href="https://github.githubassets.com/favicons/favicon-dark.png" type="image/x-icon">
 
     <body>
@@ -14,7 +14,7 @@
         <div class="navbar">
             <a class="left" href="./">Back to home</a>
             <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
-            <a class="right" target="_blank" href="https://github.com/ItsJoshie">Github</a>
+            <a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
         </div>
 
         <div class="row">
@@ -50,10 +50,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <a target="_blank" href="https://github.com/ItsJoshie/ItsJoshie.github.io">Website</a>
+                            <a target="_blank" href="https://github.com/ItsYasiru/ItsYasiru.github.io">Website</a>
                         </td>
                         <td>
-                            <a target="_blank" href="https://github.com/ItsJoshie">Myself</a>
+                            <a target="_blank" href="https://github.com/ItsYasiru">Myself</a>
                         </td>
                         <td>
                             This website.
