--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <link rel="stylesheet" href="./static/css/styles.css">
     <title>Yas_!_ru's website</title>
     <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
     <body>
         <div class="header">
             <h1>Yas_!_ru</h1>
@@ -19,7 +20,7 @@
         <div class="main">
             <div class="container">
                 <div class="container_left" style="width: 30%;" align="center">
-                    <img height=30% width=60% src="./static/images/profile_icon.jpg">
+                    <img height=225px width=225px alt="Failed to load image!" src="./static/images/profile_icon.jpg">
                 </div>
                 <div class="container_right" style="width: 70%;">
                     <h2 style="width: 90%;">About me</h2>
@@ -108,9 +109,9 @@
                             </td>
                         </tr>
                     </table>
+                    <br><br>
                 </div>
             </div>
         </div>
-
     </body>
 </html>
