--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-    <link rel="stylesheet" href="./static/css/styles.css">
-    <title>Yas_!_ru's website</title>
-    <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
+    <meta property="og:description" content="Yas_!_ru's website">
+    <title>Yas_!_ru's website</title>
+    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
     <body>
         <div class="header">
             <h1>Yas_!_ru</h1>
