--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
-    <meta property="og:description" content="Yas_!_ru's website">
+    <meta property="og:type" content="Yas_!_ru">
+    <meta property="og:title" content="Yas_!_ru's Website">
+    <meta property="og:image" content="/static/images/profile_icon.png">
+    <meta property="og:description" content="I'm 16 years old, still in high school studying for GCE AL's in 2023 mathematics stream, in...">
     <title>Yas_!_ru's website</title>
     <link rel="stylesheet" href="./static/css/styles.css">
     <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
