Added fiver link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="navbar">
             <a class="left" href="#skill set">Skill set</a>
             <a class="left" href="#projects">Projects</a>
+            <a class="right" target="_blank" href="https://www.fiverr.com/yas_i_ru">Fiverr</a>
             <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
             <a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
         </div>
