--- a/index.html
+++ b/index.html
@@ -1,122 +1,141 @@
+<!DOCTYPE html>
 <html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
+
     <meta property="og:type" content="Yas_!_ru">
     <meta property="og:title" content="Yas_!_ru's Website">
     <meta property="og:image" content="./static/images/profile_icon.png">
-    <meta property="og:description" content="I'm 16 years old, still in high school studying for GCE AL's in 2023 mathematics stream, in...">
-    <title>Yas_!_ru's website</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <meta property="og:description" content="I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in Trinity College Kandy ~ Respice Finem.">
+
+	<title>Yas_!_ru's website</title>
+
+	<link rel="stylesheet" href="./static/css/styles.css">
     <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
-    <body>
-        <div class="header">
-            <h1>Yas_!_ru</h1>
-            <p>Hello, my name is yasiru and I like to code as a hobby and this is my website</p>
-        </div>
 
-        <div class="navbar">
-            <a class="left" href="#skill set">Skill set</a>
-            <a class="left" href="#projects">Projects</a>
-            <a class="right" target="_blank" href="https://www.fiverr.com/yas_i_ru">Fiverr</a>
-            <a class="right" target="_blank" href="https://discord.com/users/837258955415748639">Discord</a>
-            <a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
-        </div>
+	<body>
 
-        <div class="main">
-            <div class="container">
-                <div class="container_left" style="width: 30%;" align="center">
-                    <img height=225px width=225px alt="Failed to load image!" src="./static/images/profile_icon.jpg">
-                </div>
-                <div class="container_right" style="width: 70%;">
-                    <h2 style="width: 90%;">About me</h2>
-                    <p  style="width: 90%;">
-                        I'm 16 years old, still in high school studying for GCE AL's in 2023 mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
-                        Got into programming when the pandemic lockdown began in 2020 April,
-                        when a dev who intoduced me to to javascript who later suggested me to learn python and javascript.
-                        Since then I've been coding a lot in both the languages.
-                        Met <a href="https://github.com/LeoSko" target="_blank" >LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project.
-                        I plan to become a full stack dev one day.
-                    </p>
-                </div>
-            </div>
-            <br>
-            <div class="container">
-                <div class="container_left">
-                    <h2 id="skill set">Skill set</h2>
-                    <table align="center">
-                        <tr>
-                            <th width="180px">Language</th>
-                            <th width="120px">Level</th>
-                            <th>Extra</th>
-                        </tr>
-                            <tr>
-                            <td>Python</td>
-                            <td>Experienced</td>
-                            <td>This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
-                        </tr>
-                        <tr>
-                            <td>Server Management</td>
-                            <td>Intermediate</td>
-                            <td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
-                        </tr>
-                        </tr>
-                            <tr>
-                            <td>Databases</td>
-                            <td>Intermediate</td>
-                            <td>So far I've worked with mongo db and PostgreSQL</td>
-                        </tr>
-                        <tr>
-                            <td>HTML</td>
-                            <td>Intermediate</td>
-                            <td>Wouldn't exacty call a language but meh.</td>
-                        </tr>
-                        <tr>
-                            <td>CSS</td>
-                            <td>Intermediate</td>
-                            <td>Learning CSS along with HTML & Javascript.</td>
-                        </tr>
-                        <tr>
-                            <td>Javascript</td>
-                            <td>Beginner</td>
-                            <td>Just started with basic application of javascript onto websites.</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="container_right">
-                    <h2 id="projects">Projects</h2>
-                    <table align="center">
-                        <tr>
-                            <th width="180px">Name</th>
-                            <th width="120px">Owner</th>
-                            <th>Details</tr>
-                        </tr>
-                        <tr>
-                            <td>
-                                <a target="_blank"  href="https://discord.com/invite/Hjr92J7">Mindustry Ranked</a>
-                            </td>
-                            <td>
-                                <a target="_blank" href="https://github.com/LeoSko">LeoSko</a>
-                            </td>
-                            <td>
-                                Worked on a discord bot that ran along side a public mindustry server.
-                                The bot is capable of retriving player statistics, match statistics & game replays served by a backend API & more.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <a target="_blank" href="https://github.com/ItsYasiru/ItsYasiru.github.io">Website</a>
-                            </td>
-                            <td>
-                                <a target="_blank" href="https://github.com/ItsYasiru">Myself</a>
-                            </td>
-                            <td>
-                                This website.
-                            </td>
-                        </tr>
-                    </table>
-                    <br><br>
-                </div>
-            </div>
-        </div>
-    </body>
+	<div class="header">
+		<h1>Yas_!_ru's website</h1>
+		<p>
+			My name is yasiru and i like to code as a hobby.
+		</p>
+	</div>
+
+	<div class="navbar">
+		<a class="left" href="#about me">About me</a>
+		<a class="left" href="#skill set">Skill set</a>
+		<a class="left" href="#projects">Projects</a>
+
+		<a class="right" href="mailto:mwmykd@gmail.com">Email</a>
+        <a class="right" href="discord:https://discord.com/users/837258955415748639">Discord</a>
+		<a class="right" target="_blank" href="https://www.fiverr.com/yas_i_ru">Fiverr</a>
+		<a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
+	</div>
+
+	<div class="row">
+		<div class="leftcolumn">
+			<div id="about me" class="card">
+				<h2>About Me</h2>
+				<center>
+					<img height=70% width=70% alt="Failed to load image!" src="./static/images/profile_icon.jpg">
+				</center>
+				<p>
+					I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
+					<br><br>
+					Got into programming when the pandemic lockdown began in 2020 April,
+					when a dev who intoduced me to to javascript who later suggested me to learn python and javascript.
+					<br><br>
+					Since then I've been coding a lot in both the languages.
+					Met <a href="https://github.com/LeoSko" target="_blank" >LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project.
+					I plan to become a full stack dev one day.
+				</p>
+			</div>
+		</div>
+
+		<div class="rightcolumn">
+			<div id="skill set" class="card">
+				<h2>Skill Set</h2>
+				<table align="center">
+					<tr>
+						<th width="180px">Language</th>
+						<th width="120px">Level</th>
+						<th>Extra</th>
+					</tr>
+						<tr>
+						<td>Python</td>
+						<td>Experienced</td>
+						<td>This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+					</tr>
+					<tr>
+						<td>Server Management</td>
+						<td>Intermediate</td>
+						<td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
+					</tr>
+					</tr>
+						<tr>
+						<td>Databases</td>
+						<td>Intermediate</td>
+						<td>So far I've worked with mongo db and PostgreSQL.</td>
+					</tr>
+					<tr>
+						<td>HTML</td>
+						<td>Intermediate</td>
+						<td>Wouldn't exacty call a language but meh.</td>
+					</tr>
+					<tr>
+						<td>CSS</td>
+						<td>Intermediate</td>
+						<td>Learning CSS along with HTML & Javascript.</td>
+					</tr>
+					<tr>
+						<td>Javascript</td>
+						<td>Beginner</td>
+						<td>Just started with basic application of javascript onto websites.</td>
+					</tr>
+				</table>
+			</div>
+			<div id="projects" class="card">
+				<h2>Projects</h2>
+				<table align="center">
+					<tr>
+						<th width="180px">Name</th>
+						<th width="120px">Owner</th>
+						<th>Details</tr>
+					</tr>
+					<tr>
+						<td>
+							<a href="discord:https://discord.com/invite/Hjr92J7">Mindustry Ranked</a>
+						</td>
+						<td>
+							<a target="_blank" href="https://github.com/LeoSko">LeoSko</a>
+						</td>
+						<td>
+							Worked on a discord bot that ran along side a public mindustry server.
+							The bot is capable of retriving player statistics, match statistics & game replays served by a backend API & more.
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<a target="_blank" href="https://github.com/ItsYasiru/ItsYasiru.github.io">Website</a>
+						</td>
+						<td>
+							<a target="_blank" href="https://github.com/ItsYasiru">Myself</a>
+						</td>
+						<td>
+							This website.
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer">
+		<p>
+			This website was made by @Yas_!_ru, Built with HTML and CSS, Hosted by Github pages.
+		</p>
+	</div>
+
+	</body>
 </html>
