--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div id="about me" class="card">
 				<h2>About Me</h2>
 				<center>
-					<img height=70% width=70% alt="Failed to load image!" src="./static/images/profile_icon.jpg">
+					<img height=77% width=77% alt="Failed to load image!" src="./static/images/profile_icon.jpg">
 				</center>
 				<p>
 					I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
@@ -117,7 +117,7 @@
 					</tr>
 					<tr>
 						<td>
-							<a target="_blank" href="https://github.com/ItsYasiru/ItsYasiru.github.io">Website</a>
+							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">Website</a>
 						</td>
 						<td>
 							<a target="_blank" href="https://github.com/ItsYasiru">Myself</a>
