--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Yas_!_ru's website</title>
 
 	<link rel="stylesheet" href="./static/css/styles.css">
-    <link rel="icon" href="./static/images/profile_icon.jpg" type="image/x-icon">
+    <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
 
 	<body>
 
@@ -38,7 +38,7 @@
 			<div id="about me" class="card">
 				<h2>About Me</h2>
 				<center>
-					<img height=77% width=77% alt="Failed to load image!" src="./static/images/profile_icon.jpg">
+					<img height=77% width=77% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
 				</center>
 				<p>
 					I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
