--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div id="about me" class="card">
 				<h2>About Me</h2>
 				<center>
-					<img height=77% width=77% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
+					<img height=96% width=96% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
 				</center>
 				<p>
 					I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
@@ -117,15 +117,24 @@
 					</tr>
 					<tr>
 						<td>
-							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">Website</a>
+							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">My Website</a>
 						</td>
 						<td>
-							<a target="_blank" href="https://github.com/ItsYasiru">Myself</a>
+							<a target="_blank" href="https://github.com/ItsYasiru">Yas_!_ru</a>
 						</td>
 						<td>
-							This website.
+							https://itsyasiru.github.io/ItsYasiru/
 						</td>
 					</tr>
+					<td>
+						<a href="https://line-a-photography.netlify.app" target="_blank">Website for Line A</a>
+					</td>
+					<td>
+						<a href="https://www.facebook.com/Achiy-Line-A-photography-105492708437210" target="_blank">Line A Photography</a>
+					</td>
+					<td>
+						https://line-a-photography.netlify.app
+					</td>
 				</table>
 			</div>
 		</div>
@@ -133,7 +142,7 @@
 
 	<div class="footer">
 		<p>
-			This website was made by @Yas_!_ru, Built with HTML and CSS, Hosted by Github pages.
+			This website was built by @Yas_!_ru, built with HTML and CSS & hosted on Github pages.
 		</p>
 	</div>
 
