--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
 
-    <meta property="og:type" content="Yas_!_ru">
     <meta property="og:title" content="Yas_!_ru's Website">
-    <meta property="og:image" content="./static/images/profile_icon.png">
-    <meta property="og:description" content="I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in Trinity College Kandy ~ Respice Finem.">
 
 	<title>Yas_!_ru's website</title>
 
@@ -41,15 +38,11 @@
 					<img height=96% width=96% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
 				</center>
 				<p>
-					I'm 16 years old, still in high school studying for 2023 GCE AL's in mathematics stream, in <a href="https://www.trinitycollege.lk" target="_blank" >Trinity College Kandy</a> <i>~ Respice Finem</i>.
+					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> <i>~ Respice Finem</i>.
 					<br><br>
-					Got into programming when the pandemic lockdown began in 2020 April,
-					when a dev who intoduced me to to javascript who later suggested me to learn python and javascript.
+					Got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
-					Since then I've been coding a lot in both the languages.
-					Met <a href="https://github.com/LeoSko" target="_blank" >LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project.
-					I plan to become a full stack dev one day.
-				</p>
+					Since then I've been coding a lot in both languages. Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project. I plan to become a full-stack dev one day.</p>
 			</div>
 		</div>
 
@@ -65,7 +58,7 @@
 						<tr>
 						<td>Python</td>
 						<td>Experienced</td>
-						<td>This is my strongest language now, I've been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+						<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
 					</tr>
 					<tr>
 						<td>Server Management</td>
@@ -111,8 +104,8 @@
 							<a target="_blank" href="https://github.com/LeoSko">LeoSko</a>
 						</td>
 						<td>
-							Worked on a discord bot that ran along side a public mindustry server.
-							The bot is capable of retriving player statistics, match statistics & game replays served by a backend API & more.
+							Built a discord bot that ran alongside a public mindustry server.
+							The bot that's capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API & more.
 						</td>
 					</tr>
 					<tr>
