--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div id="about me" class="card">
 				<h2>About Me</h2>
 				<center>
-					<img height=96% width=96% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
+					<img height=95% width=95% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
 				</center>
 				<p>
 					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> <i>~ Respice Finem</i>.
@@ -51,9 +51,9 @@
 				<h2>Skill Set</h2>
 				<table align="center">
 					<tr>
-						<th width="180px">Language</th>
-						<th width="120px">Level</th>
-						<th>Extra</th>
+						<th width="20%">Language</th>
+						<th width="15%">Level</th>
+						<th width="65%">Extra</th>
 					</tr>
 						<tr>
 						<td>Python</td>
@@ -92,16 +92,12 @@
 				<h2>Projects</h2>
 				<table align="center">
 					<tr>
-						<th width="180px">Name</th>
-						<th width="120px">Owner</th>
-						<th>Details</tr>
+						<th width="20%">Name</th>
+						<th width="80%">Details</tr>
 					</tr>
 					<tr>
 						<td>
 							<a href="discord:https://discord.com/invite/Hjr92J7">Mindustry Ranked</a>
-						</td>
-						<td>
-							<a target="_blank" href="https://github.com/LeoSko">LeoSko</a>
 						</td>
 						<td>
 							Built a discord bot that ran alongside a public mindustry server.
@@ -113,20 +109,14 @@
 							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">My Website</a>
 						</td>
 						<td>
-							<a target="_blank" href="https://github.com/ItsYasiru">Yas_!_ru</a>
-						</td>
-						<td>
-							https://itsyasiru.github.io/ItsYasiru/
+							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">https://itsyasiru.github.io/ItsYasiru</a>
 						</td>
 					</tr>
 					<td>
 						<a href="https://line-a-photography.netlify.app" target="_blank">Website for Line A</a>
 					</td>
 					<td>
-						<a href="https://www.facebook.com/Achiy-Line-A-photography-105492708437210" target="_blank">Line A Photography</a>
-					</td>
-					<td>
-						https://line-a-photography.netlify.app
+						<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
 					</td>
 				</table>
 			</div>
