--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<div class="header">
 		<h1>Yas_!_ru's website</h1>
 		<p>
-			My name is yasiru and i like to code as a hobby.
+			My name is yasiru and I like to code as a hobby.
 		</p>
 	</div>
 
-	<div class="navbar">
+	<nav class="navbar">
 		<a class="left" href="#about me">About me</a>
 		<a class="left" href="#skill set">Skill set</a>
 		<a class="left" href="#projects">Projects</a>
@@ -28,14 +28,14 @@
         <a class="right" href="discord:https://discord.com/users/837258955415748639">Discord</a>
 		<a class="right" target="_blank" href="https://www.fiverr.com/yas_i_ru">Fiverr</a>
 		<a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
-	</div>
+	</nav>
 
 	<div class="row">
 		<div class="leftcolumn">
 			<div id="about me" class="card">
 				<h2>About Me</h2>
 				<center>
-					<img height=95% width=95% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
+					<img height=90% width=90% alt="Failed to load image!" src="./static/images/profile_picture.jpg">
 				</center>
 				<p>
 					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> <i>~ Respice Finem</i>.
@@ -106,18 +106,20 @@
 					</tr>
 					<tr>
 						<td>
-							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">My Website</a>
+							My Website
 						</td>
 						<td>
 							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">https://itsyasiru.github.io/ItsYasiru</a>
 						</td>
 					</tr>
-					<td>
-						<a href="https://line-a-photography.netlify.app" target="_blank">Website for Line A</a>
-					</td>
-					<td>
-						<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
-					</td>
+					<tr>
+						<td>
+							Website for Line A
+						</td>
+						<td>
+							<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
+						</td>
+					</tr>
 				</table>
 			</div>
 		</div>
@@ -125,7 +127,7 @@
 
 	<div class="footer">
 		<p>
-			This website was built by @Yas_!_ru, built with HTML and CSS & hosted on Github pages.
+			This website was built by @Yas_!_ru, with HTML and CSS & hosted on Github pages.
 		</p>
 	</div>
 
