Removed to top button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<p align="center">
 							These are my skills, what I'm good and bad at. Please note that this is work in progress.
 						</p>
-						<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD">
+						<img alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD">
 					</div>
 
 					<table class="rightcolumn">
@@ -139,9 +139,5 @@
 			This website was built by @Yas_!_ru, with HTML and CSS & hosted on Github pages.
 		</p>
 	</div>
-
-	<script src="./static/scripts/index.js"></script>
-	<button onclick="toTop()" id="totopbutton" class="totopbutton">🔝</button>
-
 	</body>
 </html>
