--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="leftcolumn">
 			<div id="about me" class="card">
 				<h2>About Me</h2>
-					<img alt="Failed to load image!" src="./static/images/profile_picture.jpg">
+					<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile_picture.jpg"></center>
 				<p>
 					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> <i>~ Respice Finem</i>.
 					<br><br>
@@ -54,7 +54,7 @@
 						<p align="center">
 							These are my skills, what I'm good and bad at. Please note that this is work in progress.
 						</p>
-						<img alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD">
+						<center><img width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
 					</div>
 
 					<table class="rightcolumn">
