Added to top button

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 		<div class="rightcolumn">
 			<div id="skill set" class="card">
-				<row class="row">
+				<row class="container">
 
-					<div class="leftcolumn">
+					<div class="leftcontainer">
 						<h2>Skill Set</h2>
 						<p align="center">
 							These are my skills, what I'm good and bad at. Please note that this is work in progress.
@@ -57,7 +57,7 @@
 						<center><img width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
 					</div>
 
-					<table class="rightcolumn">
+					<table class="rightcontainer">
 						<tr>
 							<th width="20%">Language</th>
 							<th width="15%">Level</th>
@@ -139,5 +139,9 @@
 			This website was built by @Yas_!_ru, with HTML and CSS & hosted on Github pages.
 		</p>
 	</div>
+
+	<button onclick="toTop()" id="totopbutton" class="totopbutton">🔝</button>
+	<script src="./static/scripts/index.js"></script>
+
 	</body>
 </html>
