--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<a class="left" href="#about me">About me</a>
 		<a class="left" href="#skill set">Skill set</a>
 		<a class="left" href="#projects">Projects</a>
+		<a class="left" href="#services">Services</a>
 
 		<a class="right" href="mailto:mwmykd@gmail.com">Email</a>
         <a class="right" href="discord:https://discord.com/users/837258955415748639">Discord</a>
@@ -46,60 +47,63 @@
 		</div>
 
 		<div class="rightcolumn">
-			<div id="skill set" class="card">
-				<row class="container">
+			<div id="skill set" class="card"><row class="container">
+				<div class="leftcontainer">
+					<h2>Skill Set</h2>
+					<p align="center">
+						These are my skills, what I'm good and bad at. Please note that this is work in progress.
+					</p>
+					<center><img width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
+				</div>
 
-					<div class="leftcontainer">
-						<h2>Skill Set</h2>
-						<p align="center">
-							These are my skills, what I'm good and bad at. Please note that this is work in progress.
-						</p>
-						<center><img width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
-					</div>
+				<table class="rightcontainer">
+					<tr>
+						<th width="20%">Language</th>
+						<th width="15%">Level</th>
+						<th width="65%">Extra</th>
+					</tr>
+						<tr>
+						<td>Python</td>
+						<td>Experienced</td>
+						<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+					</tr>
+					<tr>
+						<td>Server Management</td>
+						<td>Intermediate</td>
+						<td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
+					</tr>
+					</tr>
+						<tr>
+						<td>Databases</td>
+						<td>Intermediate</td>
+						<td>So far I've worked with mongo db and PostgreSQL.</td>
+					</tr>
+					<tr>
+						<td>HTML</td>
+						<td>Intermediate</td>
+						<td>Wouldn't exacty call a language but meh.</td>
+					</tr>
+					<tr>
+						<td>CSS</td>
+						<td>Intermediate</td>
+						<td>Learning CSS along with HTML & Javascript.</td>
+					</tr>
+					<tr>
+						<td>Javascript</td>
+						<td>Beginner</td>
+						<td>Just started with basic application of javascript onto websites.</td>
+					</tr>
+				</table>
+			</row></div>
 
-					<table class="rightcontainer">
-						<tr>
-							<th width="20%">Language</th>
-							<th width="15%">Level</th>
-							<th width="65%">Extra</th>
-						</tr>
-							<tr>
-							<td>Python</td>
-							<td>Experienced</td>
-							<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
-						</tr>
-						<tr>
-							<td>Server Management</td>
-							<td>Intermediate</td>
-							<td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
-						</tr>
-						</tr>
-							<tr>
-							<td>Databases</td>
-							<td>Intermediate</td>
-							<td>So far I've worked with mongo db and PostgreSQL.</td>
-						</tr>
-						<tr>
-							<td>HTML</td>
-							<td>Intermediate</td>
-							<td>Wouldn't exacty call a language but meh.</td>
-						</tr>
-						<tr>
-							<td>CSS</td>
-							<td>Intermediate</td>
-							<td>Learning CSS along with HTML & Javascript.</td>
-						</tr>
-						<tr>
-							<td>Javascript</td>
-							<td>Beginner</td>
-							<td>Just started with basic application of javascript onto websites.</td>
-						</tr>
-					</table>
-				</row>
-			</div>
-			<div id="projects" class="card">
-				<h2>Projects</h2>
-				<table align="center">
+			<div id="projects" class="card"><row class="container">
+				<div class="leftcontainer">
+					<h2>Projects</h2>
+					<p align="center">
+						Projects that I contribute to/handle. Looking forward to contribute to Python, JavaScript projects.
+					</p>
+				</div>
+				<table class="rightcontainer">
 					<tr>
 						<th width="20%">Name</th>
 						<th width="80%">Details</tr>
@@ -130,6 +134,40 @@
 						</td>
 					</tr>
 				</table>
+			</row></div>
+
+			<div id="services" class="card"><row class="container">
+				<div class="leftcontainer">
+					<h2>Services</h2>
+					<p align="center">Services I can provide you with.</p>
+					<form id="form" style="display: none;">
+						<label for="fname">Name</label><input type="text" id="form-name"><br><br>
+						<label for="lname">Email</label><input type="email" id="form-email"><br><br>
+					</form>
+					<center>
+						<button id="form-button-1" onclick="showForm()">Let's work together</button>
+						<button id="form-button-2" onclick="submitForm()"  style="display: none;">Submit</button>
+					</center>
+				</div>
+
+				<table class="rightcontainer">
+					<tr>
+						<th width="20%">Item</th>
+						<th width="80%">Details</th>
+					</tr>
+					<tr>
+						<td>A Discord bot</td>
+						<td>
+							I can develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
+							I ensure you a good product with quality for the price. I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
+						</td>
+					</tr>
+					<tr>
+						<td>A Website</th>
+						<td>A website such as this one built the way you need it to look and behave.</th>
+					</tr>
+				</table>
+			</row></div>
 			</div>
 		</div>
 	</div>
@@ -139,6 +177,8 @@
 			This website was built by @Yas_!_ru, with HTML and CSS & hosted on Github pages.
 		</p>
 	</div>
+
+	<script src="static/scripts/index.js"></script>
 
 	</body>
 </html>
