--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		</p>
 	</div>
 
-	<script src="static/scripts/index.js"></script>
+	<script src="./static/scripts/index.js"></script>
 
 	</body>
 </html>
