--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 		<a class="left" href="#projects">Projects</a>
 		<a class="left" href="#services">Services</a>
 
-		<a class="right" href="mailto:mwmykd@gmail.com">Email</a>
-        <a class="right" href="discord:https://discord.com/users/837258955415748639">Discord</a>
-		<a class="right" target="_blank" href="https://www.fiverr.com/yas_i_ru">Fiverr</a>
-		<a class="right" target="_blank" href="https://github.com/ItsYasiru">Github</a>
+		<a class="right" href="#contact-info">Contact</a>
 	</nav>
 
 	<div class="row">
@@ -43,6 +40,14 @@
 					Got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
 					Since then I've been coding a lot in both languages. Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project. I plan to become a full-stack dev one day.</p>
+			</div>
+			<div id="contact-info" class="card" align="center">
+				<a class="socialIcon" href="mailto:mwmykd@gmail.com"><ion-icon name="mail-outline"></ion-icon></a>
+				<a class="socialIcon" href="discord:https://discord.com/users/837258955415748639"><ion-icon name="logo-discord"></ion-icon></a>
+				<a class="socialIcon" target="_blank" href="https://github.com/ItsYasiru"><ion-icon name="logo-octocat"></ion-icon></ion-icon></a>
+				<a class="socialIcon" target="_blank" href="https://wa.me/qr/6SNFWKYZ4CYFD1"><ion-icon name="logo-whatsapp"></ion-icon></ion-icon></a>
+				<a class="socialIcon" target="_blank" href="https://www.facebook.com/itsyasiru/"><ion-icon name="logo-facebook"></ion-icon></a>
+				<a class="socialIcon" target="_blank" href="https://www.instagram.com/its.yasiru/"><ion-icon name="logo-instagram"></ion-icon></a>
 			</div>
 		</div>
 
@@ -180,6 +185,8 @@
 	</div>
 
 	<script src="./static/scripts/index.js"></script>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 	</body>
 </html>
